Changed values for mqtt_port and xiaomi_token

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -14,8 +14,8 @@ netatmo_secret_key: netatmo_secret_key
 netatmo_username: netatmo_username
 netatmo_password: netatmo_password
 mqtt_broker_host: mqtt_broker_host
-mqtt_broker_port: mqtt_broker_port
+mqtt_broker_port: 8883
 mqtt_broker_ca_file: mqtt_broker_ca_file
 hue_bridge_host: hue_bridge_host
 xiaomi_robot_host: xiaomi_robot_host
-xiaomi_robot_token: xiaomi_robot_token
+xiaomi_robot_token: 000000000000000000000000000000000000
