--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -15,7 +15,7 @@ netatmo_username: netatmo_username
 netatmo_password: netatmo_password
 mqtt_broker_host: mqtt_broker_host
 mqtt_broker_port: 8883
-mqtt_broker_ca_file: mqtt_broker_ca_file
+mqtt_broker_ca_file: /etc/mosquitto/ca_certificates/mqtt_broker_ca_file.pem
 hue_bridge_host: hue_bridge_host
 xiaomi_robot_host: xiaomi_robot_host
-xiaomi_robot_token: 000000000000000000000000000000000000
+xiaomi_robot_token: dfgfghgfdggfhfgkfdfadghdafahgaiefhda
