--- a/configuration.yaml
+++ b/configuration.yaml
@@ -98,7 +98,7 @@ notify:
 
 octoprint:
   host: !secret octoprint_host
-  api_key: B1161CB3995C42F59CDBB3DEC0F69724
+  api_key: !secret octoprint_api_key
   bed: true
   number_of_tools: 2
 
